# ScrapyProject

./: README.md  RESULT_1.csv  scrapy.cfg
scrapyproject_hw/: items.py  middlewares.py  pipelines.py  pyproject.toml  settings.py
scrapyproject_hw/spiders/: wiki_films.py
