[tool.poetry]
name = "wiki-films-scrapper1"
version = "0.1.0"
description = "Here is my wiki films scrapper written with help of Scrapy framework"
authors = ["Sanan Egorov"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
